<?xml version="1.0"?>
<package>
  <name>forque_hardware_interface</name>
  <version>0.0.0</version>
  <description>The forque_hardware_interface package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="danielga@todo.todo">danielga</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>



  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aikido</build_depend>
  <build_depend>controller_manager</build_depend>
  <run_depend>controller_manager</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
