<?xml version="1.0"?>
<package>
  <name>forque_sensor_hardware</name>
  <version>0.0.0</version>
  <description>The forque_sensor_hardware package</description>

  <maintainer email="danielga@cs.uw.edu">Daniel Gallenberger</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>netft_rdt_driver</build_depend>
  <build_depend>pr_hardware_interfaces</build_depend>
  <build_depend>controller_manager</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>trigger_controller</run_depend>

  <export>
  </export>
</package>
