<?xml version="1.0"?>
<package format="2">
  <name>forque_sensor_hardware</name>
  <version>0.0.1</version>
  <description>Wireless ATI ROS1 Package</description>

  <maintainer email="ekgordon@cs.uw.edu">Ethan K. Gordon</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pr_control_msgs</depend>
  <depend>actionlib</depend>

  <export>
  </export>
</package>
